TBM_working mais le hud ne marche pas

--- a/Sjam/Config/DefaultEngine.ini
+++ b/Sjam/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=Sjam
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+EditorStartupMap=/Game/Maps/zICtest.zICtest
+GameDefaultMap=/Game/Maps/zICtest.zICtest
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode_C
+GlobalDefaultGameMode=/Game/MTB_Test_Gauthier/TurnBaseGameMode.TurnBaseGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/NavigationSystem.RecastNavMesh]
