multi player fully operational for 2 players

--- a/Sjam/Config/DefaultInput.ini
+++ b/Sjam/Config/DefaultInput.ini
@@ -76,6 +76,16 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="SetDestination",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++AxisMappings=(AxisName="Move_X",Scale=1.000000,Key=Z)
++AxisMappings=(AxisName="Move_X",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Move_Y",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Move_Y",Scale=-1.000000,Key=Q)
++AxisMappings=(AxisName="Move_z",Scale=1.000000,Key=LeftShift)
++AxisMappings=(AxisName="Move_z",Scale=-1.000000,Key=LeftControl)
++AxisMappings=(AxisName="CamRotation",Scale=1.000000,Key=A)
++AxisMappings=(AxisName="CamRotation",Scale=-1.000000,Key=E)
++AxisMappings=(AxisName="CamRot2",Scale=1.000000,Key=R)
++AxisMappings=(AxisName="CamRot2",Scale=-1.000000,Key=F)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=None
