better camera for players

--- a/Sjam/Config/DefaultInput.ini
+++ b/Sjam/Config/DefaultInput.ini
@@ -82,10 +82,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Move_Y",Scale=-1.000000,Key=Q)
 +AxisMappings=(AxisName="Move_z",Scale=1.000000,Key=LeftShift)
 +AxisMappings=(AxisName="Move_z",Scale=-1.000000,Key=LeftControl)
-+AxisMappings=(AxisName="CamRotation",Scale=1.000000,Key=A)
-+AxisMappings=(AxisName="CamRotation",Scale=-1.000000,Key=E)
-+AxisMappings=(AxisName="CamRot2",Scale=1.000000,Key=R)
-+AxisMappings=(AxisName="CamRot2",Scale=-1.000000,Key=F)
++AxisMappings=(AxisName="CamRotation",Scale=1.000000,Key=Q)
++AxisMappings=(AxisName="CamRotation",Scale=-1.000000,Key=D)
++AxisMappings=(AxisName="CamRot2",Scale=1.000000,Key=Z)
++AxisMappings=(AxisName="CamRot2",Scale=-1.000000,Key=S)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=None
